// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with minimal props 1`] = `
.c0 {
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.8rem;
  padding: 1.2rem 2.4rem;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  text-transform: Capitalize;
  border: 2px solid transparent;
  min-height: 5.4rem;
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  font-weight: 700;
  line-height: 1.625;
  background: #36A93F;
  color: #FFFFFF;
  fill: #FFFFFF;
  min-width: 16rem;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
}

.c0 > .c1 {
  margin-right: 1.2rem;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 3px rgba(0,123,255,.3);
}

.c0:hover {
  background: #319639;
}

<div>
  <span
    class=""
  >
    <button
      class="c0"
      id="test-id"
      type=""
    >
      
    </button>
  </span>
</div>
`;

exports[`Button renders with props 1`] = `
.c2 {
  pointer-events: none;
  display: inherit;
}

.c3 > .c1 {
  margin-right: 1.2rem;
}

.c0 {
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.8rem;
  padding: 1.2rem 2.4rem;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  text-transform: Capitalize;
  border: 2px solid transparent;
  min-height: 5.4rem;
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  font-weight: 700;
  line-height: 1.625;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  background: #36A93F;
  color: #FFFFFF;
  fill: #FFFFFF;
  min-width: 16rem;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
}

.c0 > .c1 {
  margin-right: 1.2rem;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 3px rgba(0,123,255,.3);
}

.c0 > .c1 {
  margin-right: 0;
  margin-left: 1.2rem;
}

.c0:hover {
  background: #319639;
}

<div>
  <span
    class=""
  >
    <button
      class="c0"
      id="test-id"
      type=""
    >
      <div
        class="c1 c2"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-info-circle fa-w-16 fa-1x "
          data-icon="info-circle"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm0-338c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
          />
        </svg>
      </div>
      test content
    </button>
  </span>
</div>
`;
